# graspChecker

./: .gitignore  CMakeLists.txt  graspChecker.thrift
app/database/GraspDatabase/empty/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
app/database/GraspDatabase/full/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
app/scripts/: graspChecker_APP.xml.template
include/: graspChecker.h  graspChecker_IDLServer.h
src/: graspChecker.cpp
